<resources>
    <string name="app_name">Timekeeper</string>
    <string name="Next">Next</string>
    <string name="got_it">Got It!</string>
    <string name="what_is_this_app_about"> \t The main idea of this app is to help to timekeeper
        to track the meeting time and note who of meeting participants doesn\'t follow meeting
        agenda. \n\tThis app also allow to gather meetings history and analyze it. \n

        \t The main idea of this app is to help to timekeeper
        to track the meeting time and note who of meeting participants doesn\'t follow meeting
        agenda. \n\tThis app also allow to gather meetings history and analyze it. \n

        \t The main idea of this app is to help to timekeeper
        to track the meeting time and note who of meeting participants doesn\'t follow meeting
        agenda. \n\tThis app also allow to gather meetings history and analyze it. \n

        \t The main idea of this app is to help to timekeeper
        to track the meeting time and note who of meeting participants doesn\'t follow meeting
        agenda. \n\tThis app also allow to gather meetings history and analyze it. \n

        \t The main idea of this app is to help to timekeeper
        to track the meeting time and note who of meeting participants doesn\'t follow meeting
        agenda. \n\tThis app also allow to gather meetings history and analyze it. \n

        \t The main idea of this app is to help to timekeeper
        to track the meeting time and note who of meeting participants doesn\'t follow meeting
        agenda. \n\tThis app also allow to gather meetings history and analyze it. \n
    </string>
    <string name="who_is_timekeeper">\t The main purpose of the Timekeeper
        role is to help the meeting run on schedule by timing each of the
        participants according to the timings given on the agenda. \n\t

        Also the timekeeper can stop meeting participants speech when meeting participants go out of agenda. \n

        \t The main purpose of the Timekeeper
        role is to help the meeting run on schedule by timing each of the
        participants according to the timings given on the agenda. \n\t

        Also the timekeeper can stop meeting participants speech when meeting participants go out of agenda. \n

        \t The main purpose of the Timekeeper
        role is to help the meeting run on schedule by timing each of the
        participants according to the timings given on the agenda. \n\t

        Also the timekeeper can stop meeting participants speech when meeting participants go out of agenda. \n

        \t The main purpose of the Timekeeper
        role is to help the meeting run on schedule by timing each of the
        participants according to the timings given on the agenda. \n\t

        Also the timekeeper can stop meeting participants speech when meeting participants go out of agenda. \n

        \t The main purpose of the Timekeeper
        role is to help the meeting run on schedule by timing each of the
        participants according to the timings given on the agenda. \n\t

        Also the timekeeper can stop meeting participants speech when meeting participants go out of agenda. \n
    </string>
    <string name="timekeeper_responsibilities">
        The main responsibilities of the Timekeeper are: \n
    - To explain the purpose of the Timekeeper role during the meeting.\n
    - To time each participant and operate the green, amber and red “traffic lights” to help them keep to time.\n
    - To provide timing reports when prompted by the Toastmaster. \n

        The main responsibilities of the Timekeeper are: \n
    - To explain the purpose of the Timekeeper role during the meeting.\n
    - To time each participant and operate the green, amber and red “traffic lights” to help them keep to time.\n
    - To provide timing reports when prompted by the Toastmaster. \n

        The main responsibilities of the Timekeeper are: \n
    - To explain the purpose of the Timekeeper role during the meeting.\n
    - To time each participant and operate the green, amber and red “traffic lights” to help them keep to time.\n
    - To provide timing reports when prompted by the Toastmaster. \n

        The main responsibilities of the Timekeeper are: \n
    - To explain the purpose of the Timekeeper role during the meeting.\n
    - To time each participant and operate the green, amber and red “traffic lights” to help them keep to time.\n
    - To provide timing reports when prompted by the Toastmaster. \n

    </string>

    <string name="skip_button">
        <u>Skip Onboarding</u>
    </string>

    <string name="default_spinner_text">Tap to add/select a project</string>

    <string name="meeting_settings">Click to Set Project Name</string>

    <string name="project_name_hint">Project Name</string>
    <string name="add_speaker">Add speaker</string>

    <string-array name="projects">
        <item>Add New Project</item>
    </string-array>


</resources>
