<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/first_tip_layout"
        >

        <TextView
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="Introduction"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#000000"
            />

        <TextView
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:text="@string/who_is_timekeeper"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#000000"
            />

        <TextView
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:text="@string/timekeeper_responsibilities"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#000000"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/second_tip_layout"
        android:visibility="invisible"
        >

        <TextView
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="Meeting preparation"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#000000"
            />

        <TextView
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:text="some text 1"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#000000"
            />

        <TextView
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:text="some text 2"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#000000"
            />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/got_it"
        android:textColor="#000000"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="changeTip"
        />

</RelativeLayout>