<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:id="@+id/skipBtn"
        android:onClick="openMainScreen"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:background="?android:attr/selectableItemBackground"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Next"
        android:textColor="#000000"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/changeTipBtn"
        android:onClick="changeTipFunc"
        />

    <ScrollView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/skipBtn"
        android:id="@+id/first_tip_scrollview"
        android:layout_above="@id/changeTipBtn"
        android:scrollIndicators="right">

        <LinearLayout
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/first_tip_layout"
            android:paddingBottom="16dp"
            >

            <TextView
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/what_is_this_app_about"
                android:textAppearance="@style/tipsFont"
                />

            <TextView
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:text="@string/who_is_timekeeper"
                android:textAppearance="@style/tipsFont"
                />

        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/skipBtn"
        android:id="@+id/second_tip_scrollview"
        android:layout_above="@id/changeTipBtn"
        >
        <LinearLayout
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/second_tip_layout"
            android:visibility="invisible"
            android:paddingBottom="16dp"
            >

            <TextView
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="Meeting preparation"
                android:textAppearance="@style/tipsFont"
                />

            <TextView
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:text="some text 1"
                android:textAppearance="@style/tipsFont"
                />

        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/skipBtn"
        android:layout_above="@id/changeTipBtn">
        <LinearLayout
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/third_tip_layout"
            android:visibility="invisible"
            android:paddingBottom="16dp"
            >

            <TextView
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="How to track time"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#000000"
                />

            <TextView
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:text="some text 21"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#000000"
                />

            <TextView
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6"
                android:text="some text 22"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#000000"
                />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>